# impro

./: LICENSE  README.md  pyproject.toml
src/impro/: __init__.py  depth.py  depth_midas.py  imfun1.py  intelligence.py  monte_carlo (antigo).py  monte_carlo.py  under_development.py
src/impro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tutorials/: MonteCarlo.ipynb  MonteCarlo2.ipynb  MonteCarlo3.ipynb  MonteCarlo5.ipynb  MonteCarlo6.ipynb  MonteCarlo7.ipynb  imex_intelligence_midas.py  imex_intelligence_superlearning.py  imex_mcx_run.py  imex_mcx_run_optical_fiber.py  intelligence_superlearning.py
tutorials/.ipynb_checkpoints/: MonteCarlo-checkpoint.ipynb  MonteCarlo4-checkpoint.ipynb  MonteCarlo6-checkpoint.ipynb
