# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impro"
version = "0.0.4"
description = "Image Processing Functions"
readme = "README.md"
authors = [{ name = "Marlon Rodrigues Garcia", email = "marlon.garcia@unesp.br" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["image processing", "digital image", "image functions"]
dependencies = [
    "numpy",
    "opencv-contrib-python",
    "matplotlib",
    "imfun",
    "scikit-learn",
    "tqdm",
    "pillow_heif",
    "pmcx"
]

requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/MarlonGarcia/impro"

[project.scripts]
realpython = "impro.__main__:main"